@@ -185,4 +185,81 @@ table.lt-4-cols.gt-14-rows tr:nth-child(odd) {
 .gt-8-cols td:first-child {
 	border-left: 0;
 }
+/*Lists*/
+ul {
+    list-style-image: url("common/en-US/images/dot.png");
+    list-style-type: circle;
+    padding-left: 1.6em;
+}
+
+ul ul {
+    list-style-image: url("common/en-US/images/dot2.png");
+    list-style-type: circle;
+}
+
+ol.1 {
+	list-style-type: decimal;
+}
+
+ol.a {
+	list-style-type: lower-alpha;
+}
+
+ol.i {
+	list-style-type: lower-roman;
+}
+ol.A {
+	list-style-type: upper-alpha;
+}
+
+ol.I {
+	list-style-type: upper-roman;
+}
+
+dt {
+	font-weight:bold;
+	margin-bottom:0px;
+	padding-bottom:0px;
+}
+
+dd {
+	margin:0px;
+	margin-left:2em;
+	padding-top:0px;
+	padding-bottom: 1em;
+}
+
+li {
+	padding-top: 0px;
+	margin-top: 0px;
+	padding-bottom: 0px;
+/*	margin-bottom: 16px; */
+}
+
+.procedure ol,
+.procedure ul,
+ul.stepalternatives {
+	counter-reset: item;
+	list-style-position: outside;
+	list-style-type: none;
+	list-style-image: none;
+}
+
+li.step {
+}
+
+li.step:before {
+	content: counters(item, ".") ". ";
+	counter-increment: item;
+	display:inline-block;
+	position: relative;
+	width: 12em;
+	right: 12.5em;
+	text-align: right;
+/*	vertical-align: text-bottom; */
+}
+
+li.step > div:first-child {
+	margin-top: -1.29em;
+}
 
